--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="stage-container remove">
             <div class="page_two hide">
-                <div id="text" style="display:none;"><p>To：温软<br><br>还有<span id="time"></span><br><span id="text1"></span><br>跨年夜玩得愉快！<br>祝你新年快乐鸭！<br><br>彩蛋:点击屏幕任意地方即可放烟花<br><br><br><span id="copyright"></span></p></div>
+                <div id="text" style="display:none;"><p>To：赵月如<br>我是小黄特别制作的跨年祝福！<br>还有<span id="time"></span><br><span id="text1"></span><br>跨年夜玩得愉快！<br>祝你新年快乐鸭！<br><br>彩蛋:点击屏幕任意地方即可放烟花<br><br><br><span id="copyright"></span></p></div>
                 <div class="type_words" id="contents" style="font-size:1.15rem;line-height:1.5rem;"></div>
             </div>
             <div class="canvas-container">
